# vcf-validator

./: .travis.yml  CMakeLists.txt  build_rocksdb.sh
docker/: Dockerfile
inc/vcf/: file_structure.hpp
rocksdb_test/: benchmark.cpp
src/vcf/: meta_entry.cpp
